--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
                     <i class="fas fa-gamepad"></i>
                 </div>
                 <h3>Trò chơi điện tử</h3>
-                <p>Tôi chơi game để giải trí, đặc biệt là các game chiến thuật và thể thao.</p>
+                <p>Tôi chơi game để giải trí, đặc biệt là các game chiến thuật và thể thao hoặc các game sáng tạo.</p>
             </div>
             
             <div class="interest-box">
@@ -877,7 +877,7 @@
                         <p>Môn học chính</p>
                     </div>
                 </div>
-                <p>Toán học giúp phát triển tư duy logic và giải quyết vấn đề. Tôi đạt 9.5 điểm Toán HK1.</p>
+                <p>Toán học giúp phát triển tư duy logic và giải quyết vấn đề.</p>
                 <div class="subject-rating">
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -946,7 +946,7 @@
                         <p>Môn học chính</p>
                     </div>
                 </div>
-                <p>Tiếng Anh mở ra cơ hội học hỏi từ thế giới. Tôi đạt 9.0 điểm và đang luyện nói nhiều hơn.</p>
+                <p>Tiếng Anh mở ra cơ hội học hỏi từ thế giới. Tiếng Anh giúp tôi học lập trình dễ dàng hơn.</p>
                 <div class="subject-rating">
                     <div class="stars">
                         <i class="fas fa-star"></i>
