--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
             </div>
             <div class="footer-col">
                 <h3>Câu nói yêu thích</h3>
-                <p>"Học, học nữa, học mãi" - V.I. Lenin</p>
+                <p>"Tự học là một cuộc chiến đơn độc, khi bạn có mục tiêu rõ ràng, cả thế giới sẽ nhường chỗ cho bạn"</p>
                 <p>"Đừng sợ thất bại, hãy sợ việc không dám thử"</p>
                 <p>"Thành công là tổng của những nỗ lực nhỏ được lặp lại mỗi ngày"</p>
             </div>
