--- a/index.html
+++ b/index.html
@@ -1038,8 +1038,8 @@
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.youtube.com/@GreensVN"><i class="fab fa-youtube"></i></a>
-                    <a href="https://github.com/GreensVN"><i class="fab fa-tiktok"></i></a>
-                    <a href="https://www.tiktok.com/@lamtran140912"><i class="fab fa-github"></i></a>
+                    <a href="https://www.tiktok.com/@lamtran140912"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://github.com/GreensVN"><i class="fab fa-github"></i></a>
 
                 </div>
             </div>
